@@ -10,6 +10,8 @@ NOT BE PRESENT IN THE STABLE BRANCH
 For details of when a commit makes it into the stable branch see the ReleaseNotes file.
 
 
+2018-04-05 niel
+	Fix Missing PHPMailer object creation.
 2018-04-02 niel
 	Mrg: dev => Latest-testing to prepare for updating stable 0.x to v0.8.5.0
 
